Hemos hecho la ventana, terminado de hacer las clases y el fichero patra los properties

--- a/src/Utilidades/PropiedadSaludo.properties
+++ b/src/Utilidades/PropiedadSaludo.properties
@@ -3,4 +3,4 @@
 # and open the template in the editor.
 DRIVER=com.mysql.jdbc.Driver
 jdbc=mysql://localhost/mibasedatos
-SALUDO =Hola mundo!!
+SALUDO = Hola desde el fichero!!
