hemos creado el ModelFactory, hemos llamado el método del ModelFactory a la implementación del modelo y tambien hemos credo un fichero

--- a/src/Utilidades/PropiedadSaludo.properties
+++ b/src/Utilidades/PropiedadSaludo.properties
@@ -3,4 +3,5 @@
 # and open the template in the editor.
 DRIVER=com.mysql.jdbc.Driver
 jdbc=mysql://localhost/mibasedatos
-SALUDO = Hola desde el fichero!!
+BD_type=B
+File_type=F
