--- a/src/Utilidades/PropiedadSaludo.properties
+++ b/src/Utilidades/PropiedadSaludo.properties
@@ -1,6 +1,4 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-DRIVER=com.mysql.jdbc.Driver
-jdbc=mysql://localhost/mibasedatos
-SALUDO =Hola mundo!!
+file_type = Hola mundo!!
