--- a/src/Utilidades/PropiedadSaludo.properties
+++ b/src/Utilidades/PropiedadSaludo.properties
@@ -1,4 +1,11 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-file_type = Hola mundo!!
+saludo=HOLAA!!!
+DB=saludito
+Conn=jdbc:mysql://localhost:3306/saludito?serverTimezone=Europe/Madrid&useSSL=false
+DBUser=root
+DBPass=abcd*1234
+Driver=com.mysql.jdbc.Driver
+modelo=Fich
+visual=Texto
