--- a/src/Utilidades/PropiedadSaludo.properties
+++ b/src/Utilidades/PropiedadSaludo.properties
@@ -7,5 +7,5 @@ Conn=jdbc:mysql://localhost:3306/saludito?serverTimezone=Europe/Madrid&useSSL=fa
 DBUser=root
 DBPass=abcd*1234
 Driver=com.mysql.jdbc.Driver
-modelo=F
+modelo=Fich
 visual=Texto
